# SpriteAnime

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  config.example.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
docs/: cli.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.sidecar.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  asset_library.rs  config.rs  events.rs  image_processor.rs  lib.rs  logger.rs  main.rs  path_safety.rs  workbench.rs  workspace.rs
src-tauri/src/api_client/: download.rs  image_calls.rs  media_parse.rs  media_refs.rs  mod.rs  models.rs  sse.rs  tests_image.rs  tests_image_multipart.rs  tests_video.rs  text.rs  transport.rs  types.rs  utils.rs  video_calls.rs
src-tauri/src/cli/: config.rs  local.rs  mod.rs  output.rs  redraw.rs  remote.rs  sprite.rs  video.rs
src-tauri/src/commands/: filesystem.rs  generate.rs  mod.rs  sprite.rs  tools.rs
src-tauri/src/commands/generate/: api_checks.rs  config_commands.rs  constraints.rs  files.rs  image_generation.rs  matting.rs  mod.rs  prompt.rs  reference.rs  tests.rs  types.rs  video.rs  workbench_commands.rs
src-tauri/src/commands/redraw/: execution.rs  image_pipeline.rs  input_pipeline.rs  mod.rs  planning.rs  store.rs  tests.rs  types.rs
src-tauri/src/commands/sprite/: bounds.rs  extraction.rs  mod.rs  planning.rs  probe.rs  sprite_image.rs  storage.rs  tests.rs  types.rs  video_commands.rs
src-tauri/src/commands/tools/: download.rs  manifest.rs  mod.rs  tests.rs  text.rs
src-tauri/src/config/: mod.rs  presets.rs  tests.rs
src-tauri/src/image_processor/: erase.rs  export.rs  io.rs  matting.rs  mod.rs  sprite_layout.rs  tests.rs
src-tauri/src/runtime/: error.rs  locks.rs  mod.rs  paths.rs  progress.rs
src-tauri/src/services/: config.rs  constraints.rs  mod.rs  records.rs
src-tauri/src/workbench/: tests.rs
(+153 files in other folders)
