[package]
name = "sprite-anime"
version = "0.1.0"
description = "AI图片生成与精灵图动画预览工具"
authors = ["SpriteAnimte"]
edition = "2021"

[lib]
name = "sprite_anime_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
opener = "0.7"
parking_lot = "0.12"
tokio = { version = "1", features = ["time"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
