[package]
name = "sprite-anime"
version = "0.1.0"
description = "AI图片生成与精灵图动画预览工具"
authors = ["SpriteAnimte"]
edition = "2021"
default-run = "sprite-anime"

[lib]
name = "sprite_anime_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "sprite-anime-cli"
path = "src/bin/sprite-anime-cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
base64 = "0.22"
chrono = "0.4"
opener = "0.7"
parking_lot = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
fs2 = "0.4"
sha2 = "0.10"
clap = { version = "4", features = ["derive", "env"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
